# loom

./: pyproject.toml  pytest.ini  run_tests.py  test_example.py
.github/workflows/: tests.yml
loom/: __init__.py  cli.py
loom/core/: __init__.py  preferences.py  secrets.py
loom/utils/: paths.py
tests/: __init__.py  test_secrets.py
tests/core/: __init__.py  test_preferences.py  test_secrets.py
