[project]
name = "loom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "chromadb>=1.2.1",
  "fastapi>=0.120.0",
  "keyring>=25.6.0",
  "llama-cpp-python>=0.3.16",
  "pytest>=8.4.2",
  "requests>=2.32.5",
  "rich>=13.0.0",
  "typer==0.20.0",
  "uvicorn>=0.38.0",
]

[project.scripts]
loom = "loom.cli:app" 

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-mock>=3.10.0",
]
